[package]
name = "gitfrog"
version = "0.1.2"
edition = "2021"
description = "Get current info about PRs and issues"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/gitfrog"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
url = "2.5"
futures = "0.3"
url-matcher = "0.1.0"
log = "0.4"
